--- a/spring-2015-msan622/project_dataset.html
+++ b/spring-2015-msan622/project_dataset.html
@@ -23,159 +23,38 @@
         margin-left: auto;
         margin-right: auto;
     }
-
-    .axis text {
-        font: 10px sans-serif;
-    }
-
-    .axis path,
-    .axis line {
-        fill: none;
-        stroke: darkgray;
-        shape-rendering: crispEdges;
-    }
-
-    .x.axis path {
-        fill: none;
-        stroke: darkgray;
-        shape-rendering: crispEdges; 
-        /*display: none;*/
-    }
-
-    .x.axis2 path {
-/*        fill: none;
-        stroke: darkgray;
-        shape-rendering: crispEdges; */
-        display: none;
-    }
-    .axis2 text {
-        font-family: "Lucida Console", Monaco, monospace;
-        font-size: 12px;
-    }
-    .axis3 line,
-    .axis3 path {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges;
-    }
-    
-    .axis3 text {
-        font: 10px sans-serif;
-        text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
-    }
-    .d3-tip {
-      line-height: 1;
-      font-weight: bold;
-      padding: 12px;
-      background: rgba(44,123,182, 0.9);
-      color: #fff;
-      border-radius: 5px;
-    }
-
-    /* Creates a small triangle extender for the tooltip */
-    .d3-tip:after {
-      box-sizing: border-box;
-      display: inline;
-      font-size: 10px;
-      width: 100%;
-      line-height: 1;
-      color: rgba(44,123,182, 0.9);
-      content: "\25B6";
-      position: absolute;
-      text-align: center;
-    }
-    .d3-tip.w:after {
-      content: "\25B6";
-      margin: -4px 0 0 -1px;
-      top: 50%;
-      left: 10px;
-      position: absolute;
-    }
-
-    .d3-tip2 {
-      line-height: 1;
-      font-weight: bold;
-      padding: 12px;
-      background: rgba(37,37,37, 0.9);
-      color: #fff;
-      border-radius: 5px;
-    }
-    .d3-tip2:after {
-      box-sizing: border-box;
-      display: inline;
-      font-size: 10px;
-      width: 100%;
-      line-height: 1;
-      color: rgba(37,37,37, 0.9);
-      content: "\25BC";
-      position: absolute;
-      text-align: center;
-    }
-
-    .d3-tip2.n:after {
-        margin: -3px 0 0 0;
-        top: 100%;
-        left: 0;
-    }
-
-    .legend circle {
-      fill: none;
-      stroke: #ccc;
-    }
-
-    .legend text {
-      fill: #777;
-      font: 10px sans-serif;
-      text-anchor: middle;
-    }
-
-    .clegend circle {
-    fill: none;
-    stroke: #ccc;
-    }
-
-    .clegend text {
-      fill: #777;
-      font: 10px sans-serif;
-      text-anchor: middle;
-    }
-    
-    .chart {
-      float: left;
-      padding-right: 5px;
-      padding-bottom: 5px;
-      padding-top:0;
-      padding-left:0;
-    }
-
-    .background path {
-      fill: none;
-      stroke: #ddd;
-      shape-rendering: crispEdges;
-    }
-
-    .foreground path {
-      fill: none;
-      stroke: steelblue;
-    }
-
-    .brush .extent {
-      fill-opacity: .3;
-      stroke: #fff;
-      shape-rendering: crispEdges;
-    }
+  .ref1 .popup{
+    display: none;
+  }
+  .ref1:hover .popup {
+    display: block;
+  }
 
 </style>
 
 <h1>Project Dataset: Alcohol Consumption</h1>
-  Jeff Baker<br>
+  Jeff Baker<br><br>
 <!--   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<small><a href="https://github.com/jbaker22/jbaker22.github.io/blob/master/spring-2015-msan622/homework2.html">Code on GitHub</a></small>
   <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<small><a href="#projectDetails">Submission details (below)</a></small>
  --><script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 <body>
-<div id="projectDetails"><br>
-<p>My project dataset is sourced from the World Health Organization (WHO), and consists of <a href="http://apps.who.int/gho/data/node.main.A1026?lang=en" target="_blank">recorded alcohol consumption (per capita) by country, from 2000-2013</a>. This data (with some formatting conducted) can be found on my repository <a href="booze.csv">here</a>. The data is <a href="http://www.who.int/about/copyright/en/">publicly available for distribution</a> if used for private use and research.</p>
+<div id="projectDetails">
+  <h2>Source</h2>
+  <p>My project dataset is sourced from the World Health Organization (WHO), and consists of <a href="http://apps.who.int/gho/data/node.main.A1026?lang=en" target="_blank">recorded alcohol consumption (per capita) by country, from 2000-2013</a>. The data is <a href="http://www.who.int/about/copyright/en/">publicly available for distribution</a> if used for private use or research.</p>
+  <h2>Data</h2>
+  <p>The data consists of a mix of quantitative and categorical data. Data fields include:
+    <ul>
+      <li>Year (nominal) - 2000 through 2013</li>
+      <li>Country (categorical) - 197 countries worldwide</li>
+      <li>Beverage Type (categorical) - Consumption grouped by: beer, wine, spirits, other, all types</li>
+      <li>Consumption (continuous) - Recorded alcohol per capita (APC), measured in liters<span class="ref1"><sup><a href="http://apps.who.int/gho/indicatorregistry/App_Main/view_indicator.aspx?iid=462" target="_blank">1</a><div id="popup" style="display: none"></div></sup></span></li>
+    </ul>
+    After looking at a number of datasets, including NFL season data and advertising data, I chose this one because of it's relative simplicity. I also thought the topic of alcohol is interesting, and comparing how consumption varies by country or continent would be fascinating. Between the categorical and time series components to this dataset, I have a number of visualization techniques to choose from. 
+  <br><br>This data&mdash;reformatted for use in this project&mdash;can be found on my repository <a href="booze.csv">here</a>.</p>
+  <h2>Dataset Preparation</h2>
+  <p>The formatting of the data is "wide," with the years of data as columns, with rows divided by country and alcohol category. Data was reformatted in R, leveraging the <code>melt</code> function within the <code>reshape2</code> package. This allowed me to convert the data into a "long" form instead, with the data falling into the four columns listed above. The data includes 0, null, and "No data" values, which will be handled during the data visualization step. </p>
+
 </div>
 <script>
 
@@ -183,4 +62,6 @@ d3.csv("booze2000.csv", function(err, csv) {
     data = csv;
     console.log([data[0],data[1], data[2], data[3]])
   });
+
+
 </script>
