--- a/spring-2015-msan622/project_dataset.html
+++ b/spring-2015-msan622/project_dataset.html
@@ -41,7 +41,7 @@
 <body>
 <div id="projectDetails">
   <h2>Source</h2>
-  <p>My project dataset is sourced from the World Health Organization (WHO), and consists of <a href="http://apps.who.int/gho/data/node.main.A1026?lang=en" target="_blank">recorded alcohol consumption (per capita) by country, from 2000-2013</a>. The data is <a href="http://www.who.int/about/copyright/en/">publicly available for distribution</a> if used for private use or research.</p>
+  <p>My project dataset is sourced from the World Health Organization (WHO), and consists of <a href="http://apps.who.int/gho/data/node.main.A1026?lang=en" target="_blank">recorded alcohol consumption (per capita) by country, from 2000-2013</a>. The data is <a href="http://www.who.int/about/copyright/en/" target="_blank">publicly available for distribution</a> if used for private use or research.</p>
   <h2>Data</h2>
   <p>The data consists of a mix of quantitative and categorical data. Data fields include:
     <ul>
@@ -51,7 +51,7 @@
       <li>Consumption (continuous) - Recorded alcohol per capita (APC), measured in liters<span class="ref1"><sup><a href="http://apps.who.int/gho/indicatorregistry/App_Main/view_indicator.aspx?iid=462" target="_blank">1</a><div id="popup" style="display: none"></div></sup></span></li>
     </ul>
     After looking at a number of datasets, including NFL season data and advertising data, I chose this one because of it's relative simplicity. I also thought the topic of alcohol is interesting, and comparing how consumption varies by country or continent would be fascinating. Between the categorical and time series components to this dataset, I have a number of visualization techniques to choose from. 
-  <br><br>This data&mdash;reformatted for use in this project&mdash;can be found on my repository <a href="booze.csv">here</a>.</p>
+  <br><br>This data&mdash;reformatted for use in this project&mdash;can be found on my repository <a href="https://github.com/jbaker22/jbaker22.github.io/blob/master/spring-2015-msan622/booze2000.csv" target="_blank">here</a>.</p>
   <h2>Dataset Preparation</h2>
   <p>The formatting of the data is "wide," with the years of data as columns, with rows divided by country and alcohol category. Data was reformatted in R, leveraging the <code>melt</code> function within the <code>reshape2</code> package. This allowed me to convert the data into a "long" form instead, with the data falling into the four columns listed above. The data includes 0, null, and "No data" values, which will be handled during the data visualization step. </p>
 
