--- a/spring-2015-msan622/index.html
+++ b/spring-2015-msan622/index.html
@@ -63,7 +63,7 @@
 <p>
 <div><a href="homework1.html?hellothere!">Homework 1</a></div>
 <div><a href="homework2.html">Homework 2</a></div>
-<div><a href="#">Homework 3</a></div>
+<div><a href="homework3.html">Homework 3</a></div>
 <div><a href="#">Homework 4</a></div>
 <div><a href="#">Homework 5</a></div>
 </p>
