removed second y-axis, added third line

--- a/spring-2015-msan622/homework3.html
+++ b/spring-2015-msan622/homework3.html
@@ -33,11 +33,6 @@
     .axis text {
         font: 11px sans-serif;
     }
-    /*
-    .x.axis path {
-      display: none;
-    }
-    */
 
     .line {
       stroke: black;
@@ -53,6 +48,10 @@
       stroke: #d95f02;
     }
 
+    .line.line2 {
+      stroke: #7570b3;
+    }
+
     .overlay {
       fill: none;
       pointer-events: all;
@@ -63,11 +62,14 @@
     }
 
     .focus circle.y0 {
-      stroke: green;
+      stroke: darkgreen;
     }
 
     .focus circle.y1 {
-      stroke: orange;
+      stroke: orangered;
+    }
+    .focus circle.y2 {
+      stroke: purple;
     }
 
     .focus text {
@@ -92,7 +94,11 @@
       stroke-dasharray: 3 3;
       opacity: .5;
     }
-
+    .focus line.y2 {
+      stroke: purple;
+      stroke-dasharray: 3 3;
+      opacity: .5;
+    }
     .brush .extent {
       stroke: #fff;
       fill-opacity: .125;
@@ -136,35 +142,28 @@ d3.csv("seatbelts.csv", function(error, csv) {
 
 function multiline(data) {
     // http://bl.ocks.org/gniemetz/4618602
+    // http://bl.ocks.org/mbostock/3884955
     var focus_margin = {top: 20, right: 80, bottom: 100, left: 40},
         focus_width = 960 - focus_margin.left - focus_margin.right,
         focus_height = 500 - focus_margin.top - focus_margin.bottom,
         context_margin = {top: 430, right: 80, bottom: 20, left: 40},
         context_height = 500 - context_margin.top - context_margin.bottom;
 
-// Time(X), Y1       , Y2,   (not plotted)
-// Uhrzeit, Durchschn, Anz,  Gesamt
-// TOD    , Average  , Qty,  total
-// 11:29,   99,        8948, 891247
-// Month    drivers    DriversKilled 
-
-// "Month","DriversKilled","drivers","front","rear","kms","PetrolPrice","VanKilled","law"
-// "Jan 1969",107,1687,867,269,9059,0.102971811805368,12,0
-// "Feb 1969",97,1508,825,265,7685,0.102362995884646,6,0
     var formatting = d3.format(",.0f");
 
     var formatDate = d3.time.format("%b %Y"),
         parseDate = formatDate.parse,
         formatting = d3.format(",.0f");
         bisectDate = d3.bisector(function(d) { return d.Month; }).left,
-        formatOutput0 = function(d) { return formatDate(d.Month) + " - " + "Drivers: " + formatting(d.drivers); },
-        formatOutput1 = function(d) { return formatDate(d.Month) + " - " + "Distance (km): " + formatting(d.kms); };
+        formatOutput0 = function(d) { return formatDate(d.Month) + " - " + "Total Drivers: " + formatting(d.drivers); },
+        formatOutput1 = function(d) { return formatDate(d.Month) + " - " + "Drivers Killed: " + d.DriversKilled; },
+        formatOutput2 = function(d) { return formatDate(d.Month) + " - " + "Front Seat Injuries: " + formatting(d.front); };
 
     data.forEach(function(d) {
         d.Month = parseDate(d.Month);
         d.drivers = +d.drivers;
-        d.kms = +d.kms;
-        // console.log(d.Month);
+        d.DriversKilled = +d.DriversKilled;
+        d.front = +d.front;
     });
 
     // set x scales for both context and focus views
@@ -176,11 +175,7 @@ function multiline(data) {
     // set y scales for both context and focus views
     var focus_y0 = d3.scale.linear()
         .range([focus_height, 0]),
-        focus_y1 = d3.scale.linear()
-        .range([focus_height, 0]),
         context_y0 = d3.scale.linear()
-        .range([context_height, 0]),
-        context_y1 = d3.scale.linear()
         .range([context_height, 0]);
 
     // create x-axes for focus and context
@@ -188,7 +183,7 @@ function multiline(data) {
         .scale(focus_x)
         .tickFormat(d3.time.format("%b %Y"))
         .orient("bottom"),
-        focus_xAxis = d3.svg.axis()
+        context_xAxis = d3.svg.axis()
         .scale(context_x)
         .tickFormat(d3.time.format("%b %Y"))
         .orient("bottom");
@@ -197,44 +192,43 @@ function multiline(data) {
     var focus_yAxisLeft = d3.svg.axis()
         .scale(focus_y0)
         .orient("left");
-        focus_yAxisRight = d3.svg.axis()
-        .scale(focus_y1)
-        .orient("right");
+        // focus_yAxisRight = d3.svg.axis()
+        // .scale(focus_y1)
+        // .orient("right");
 
     // create brush object
     var brush = d3.svg.brush()
         .x(context_x)
         .on("brush", brush);
 
-    // var area = d3.svg.area()
-    //     .interpolate("monotone")
-    //     .x(function(d) { return x(d.date); })
-    //     .y0(height)
-    //     .y1(function(d) { return y(d.price); });
-
-    // var area2 = d3.svg.area()
-    //     .interpolate("monotone")
-    //     .x(function(d) { return x2(d.date); })
-    //     .y0(height2)
-    //     .y1(function(d) { return y2(d.price); });
-
     var focus_line0 = d3.svg.line()
-        .interpolate("cardinal")
+        .interpolate("linear")
         .x(function(d) { return focus_x(d.Month); })
         .y(function(d) { return focus_y0(d.drivers); });
 
     var focus_line1 = d3.svg.line()
-        .interpolate("cardinal")
+        .interpolate("linear")
         .x(function(d) { return focus_x(d.Month); })
-        .y(function(d) { return focus_y1(d.kms); });
+        .y(function(d) { return focus_y0(d.DriversKilled); });
 
+    var focus_line2 = d3.svg.line()
+        .interpolate("linear")
+        .x(function(d) { return focus_x(d.Month); })
+        .y(function(d) { return focus_y0(d.front); });
+
+
+    // add lines to context plot
     var context_line0 = d3.svg.line()
         .x(function(d) { return context_x(d.Month); })
         .y(function(d) { return context_y0(d.drivers); });
 
     var context_line1 = d3.svg.line()
         .x(function(d) { return context_x(d.Month); })
-        .y(function(d) { return context_y1(d.kms); });
+        .y(function(d) { return context_y0(d.DriversKilled); });
+
+    var context_line2 = d3.svg.line()
+        .x(function(d) { return context_x(d.Month); })
+        .y(function(d) { return context_y0(d.front); });
 
     var svg = d3.select("#multiseries").append("svg")
         .attr("id", "plot")
@@ -270,24 +264,12 @@ function multiline(data) {
     // set domains for x, y1, and y2 for both context and focus plots
     focus_x.domain([data[0].Month, data[data.length - 1].Month]);
     focus_y0.domain([0, d3.max(data, function(d) { return d.drivers; })]).nice();
-    focus_y1.domain([0, d3.max(data, function(d) { return d.kms; })]).nice();
+    // focus_y1.domain([0, d3.max(data, function(d) { return d.kms; })]).nice();
     context_x.domain(focus_x.domain());
     context_y0.domain(focus_y0.domain()).nice();
-    context_y1.domain(focus_y1.domain()).nice();
+    // context_y1.domain(focus_y1.domain()).nice();
 
-    // add clipping paths
-    main.append("path")
-        .datum(data)
-        .attr("clip-path", "url(#clip)")
-        .attr("class", "line line0")
-        .attr("d", focus_line0);
-
-    main.append("path")
-        .datum(data)
-        .attr("clip-path", "url(#clip)")
-        .attr("class", "line line1")
-        .attr("d", focus_line1);
-
+    // add x- and y-axis
     main.append("g")
         .attr("class", "x axis")
         .attr("transform", "translate(0," + focus_height + ")")
@@ -303,16 +285,24 @@ function multiline(data) {
         .style("text-anchor", "end")
         .text("Drivers");
 
-    main.append("g")
-        .attr("class", "y axis axisRight")
-        .attr("transform", "translate(" + focus_width + ", 0)")
-        .call(focus_yAxisRight)
-        .append("text")
-        .attr("transform", "rotate(-90)")
-        .attr("y", -12)
-        .attr("dy", ".71em")
-        .style("text-anchor", "end")
-        .text("Distance Driven (km)");
+    // add clipping paths - draws the actual lines
+    main.append("path")
+        .datum(data)
+        .attr("clip-path", "url(#clip)")
+        .attr("class", "line line0")
+        .attr("d", focus_line0);
+
+    main.append("path")
+        .datum(data)
+        .attr("clip-path", "url(#clip)")
+        .attr("class", "line line1")
+        .attr("d", focus_line1);
+
+    main.append("path")
+        .datum(data)
+        .attr("clip-path", "url(#clip)")
+        .attr("class", "line line2")
+        .attr("d", focus_line2);
 
     mini.append("g")
         .attr("class", "x axis")
@@ -320,7 +310,6 @@ function multiline(data) {
         .call(focus_xAxis);
 
     // append fill portion for time period when law was enacted
-
     mini.append("path")
         .datum(data)
         .attr("class", "line")
@@ -330,6 +319,12 @@ function multiline(data) {
         .datum(data)
         .attr("class", "line")
         .attr("d", context_line1);
+
+    mini.append("path")
+        .datum(data)
+        .attr("class", "line")
+        .attr("d", context_line2);
+
 
     mini.append("g")
         .attr("class", "x brush")
@@ -354,19 +349,26 @@ function multiline(data) {
         .attr("x1", focus_width - 6) // to the left
         .attr("x2", focus_width + 6); // to the right
 
+    focus.append("line")
+        .attr("class", "y2")
+        .attr("x1", focus_width - 6)
+        .attr("x2", focus_width + 6);
+
     // Display on the right bar
     focus.append("line")
         .attr("class", "y1")
         .attr("x1", focus_width - 6)
         .attr("x2", focus_width + 6);
 
+    // add focus circles and text to the hover tooltips
     focus.append("circle")
         .attr("class", "y0")
         .attr("r", 4);
 
     focus.append("text")
         .attr("class", "y0")
-        .attr("dy", "1em");
+        .attr("dy", "-1em")
+        .style("text-anchor", "end");
 
     focus.append("circle")
         .attr("class", "y1")
@@ -374,7 +376,19 @@ function multiline(data) {
 
     focus.append("text")
         .attr("class", "y1")
-        .attr("dy", "-1em");
+        .attr("dy", "-1em")
+        .style("text-anchor", "end");
+
+
+    focus.append("circle")
+        .attr("class", "y2")
+        .attr("r", 4);
+
+    focus.append("text")
+        .attr("class", "y2")
+        .attr("dy", "-1em")
+        .style("text-anchor", "end");
+
 
     main.append("rect")
         .attr("class", "overlay")
@@ -384,27 +398,39 @@ function multiline(data) {
         .on("mouseout", function() { focus.style("display", "none"); })
         .on("mousemove", mousemove);
 
+
     function mousemove() {
         var x0 = focus_x.invert(d3.mouse(this)[0]),
         i = bisectDate(data, x0, 1),
         d0 = data[i - 1],
         d1 = data[i],
         d = x0 - d0.Month > d1.Month - x0 ? d1 : d0;
+        // add circles and text to the mousemove event
         focus.select("circle.y0").attr("transform", "translate(" + focus_x(d.Month) + "," + focus_y0(d.drivers) + ")");
         focus.select("text.y0").attr("transform", "translate(" + focus_x(d.Month) + "," + focus_y0(d.drivers) + ")")
             .text(formatOutput0(d));     // text for hover tooltip
-        focus.select("circle.y1").attr("transform", "translate(" + focus_x(d.Month) + "," + focus_y1(d.kms) + ")");
-        focus.select("text.y1").attr("transform", "translate(" + focus_x(d.Month) + "," + focus_y1(d.kms) + ")")
+        focus.select("circle.y1").attr("transform", "translate(" + focus_x(d.Month) + "," + focus_y0(d.DriversKilled) + ")");
+        focus.select("text.y1").attr("transform", "translate(" + focus_x(d.Month) + "," + focus_y0(d.DriversKilled) + ")")
             .text(formatOutput1(d));   // text for hover tooltip
+        focus.select("circle.y2").attr("transform", "translate(" + focus_x(d.Month) + "," + focus_y0(d.front) + ")");
+        focus.select("text.y2").attr("transform", "translate(" + focus_x(d.Month) + "," + focus_y0(d.front) + ")")
+            .text(formatOutput2(d));   // text for hover tooltip
+
         focus.select(".x").attr("transform", "translate(" + focus_x(d.Month) + ",0)");
-        focus.select(".y0").attr("transform", "translate(" + focus_width * -1 + ", " + focus_y0(d.drivers) + ")").attr("x2", focus_width + focus_x(d.Month));
-        focus.select(".y1").attr("transform", "translate(0, " + focus_y1(d.kms) + ")").attr("x1", focus_x(d.Month));
+        // control dotted lines to axis (y0, y1, y2)
+        focus.select(".y0").attr("transform", "translate(" + focus_width * -1 + ", " + focus_y0(d.drivers) + ")")
+               .attr("x2", focus_width + focus_x(d.Month));
+        focus.select(".y1").attr("transform", "translate(" + focus_width * -1 + ", " + focus_y0(d.DriversKilled) + ")")
+               .attr("x2", focus_width + focus_x(d.Month));
+        focus.select(".y2").attr("transform", "translate(" + focus_width * -1 + ", " + focus_y0(d.front) + ")")
+               .attr("x2", focus_width + focus_x(d.Month));
     }
 
     function brush() {
         focus_x.domain(brush.empty() ? context_x.domain() : brush.extent());
         main.select(".line0").attr("d", focus_line0);
         main.select(".line1").attr("d", focus_line1);
+        main.select(".line2").attr("d", focus_line2);
         main.select(".x.axis").call(focus_xAxis);
     }
 }
